--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,6 @@ version: "3"
 services:
   app:
     build: ./
-    container_name: zenless_api
+    container_name: zenless_api_build
     ports:
-      - "3001:3001"
+      - "8001:8001"
