--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "start": "node .output/server/index.mjs",
-    "docker:build": "docker-compose build",
-    "docker:up": "docker-compose up",
-    "docker:dev": "docker-compose up --build",
+    "docker:dev": "docker-compose -f docker-compose.dev.yml up --build",
+    "docker:build": "docker compose -f docker-compose.yml up --build",
     "docker:down": "docker-compose down"
   },
   "dependencies": {
